--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -19,6 +19,10 @@ h4 {
 h1 {
     margin-top: 0;
     font-size: 3.998rem;
+    &+h2 {
+        margin-top: -20px;
+        font-size: 25px;
+    }
 }
 
 h2 {
@@ -39,4 +43,17 @@ h5 {
 
 h6 {
     font-size: .88rem;
+}
+
+// blockquotes
+blockquote {
+    padding: 0px;
+    page-break-inside: avoid;
+    margin: 0;
+    border-left: 5px solid #7a7a7a;
+    font-style: italic;
+    text-align: left;
+    p {
+        padding:10px;
+    }
 }
