--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -25,8 +25,7 @@
     a[href^="javascript:"]:after {
         content: "";
     }
-    pre,
-    blockquote {
+    pre {
         border: 1px solid #999;
         page-break-inside: avoid;
     }
@@ -123,13 +122,7 @@ pre {
     text-align: left;
 }
 
-blockquote {
-    margin: 0;
-    border-left: 5px solid #7a7a7a;
-    font-style: italic;
-    padding: 1.33em;
-    text-align: left;
-}
+
 
 ul,
 ol,
