--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -1,59 +1,14 @@
+@import 'content.headings';
+@import 'content.table';
+@import 'content.blockquote';
 @import 'content.table';
 
 .content {
     margin: auto;
     max-width: $content-width;
-}
-
-// Headings
-h1,
-h2,
-h3,
-h4 {
-    margin: 1.414rem 0 .5rem;
-    font-weight: inherit;
-    line-height: 1.42;
-    text-align: center;
-}
-
-h1 {
-    margin-top: 0;
-    font-size: 3.998rem;
-    &+h2 {
-        margin-top: -20px;
-        font-size: 25px;
+    @media screen and (max-width: $content-width + 40px) {
+        margin-left: 20px;
+        margin-right: 20px;
     }
 }
 
-h2 {
-    font-size: 2.827rem;
-}
-
-h3 {
-    font-size: 1.999rem;
-}
-
-h4 {
-    font-size: 1.414rem;
-}
-
-h5 {
-    font-size: 1.121rem;
-}
-
-h6 {
-    font-size: .88rem;
-}
-
-// blockquotes
-blockquote {
-    padding: 0px;
-    page-break-inside: avoid;
-    margin: 0;
-    border-left: 5px solid #7a7a7a;
-    font-style: italic;
-    text-align: left;
-    p {
-        padding:10px;
-    }
-}
