--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -6,6 +6,7 @@
     <style>
       {{{css}}}
     </style>
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <div class='content'>
