--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -6,7 +6,7 @@
     <style>
       {{{css}}}
     </style>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class='content'>
@@ -19,7 +19,11 @@
       </div>
       {{{html}}}
       <div class='footer'>
-        
+        {{#each footerHeadings}}
+          {{#each footerItems}}
+            <a href='/{{link}}'>{{name}}</a>
+          {{/each}}
+        {{/each}}
       </div>
     </div>
     
