now allows frontMatter

--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -19,10 +19,8 @@
       </div>
       {{{html}}}
       <div class='footer'>
-        {{#each footerHeadings}}
-          {{#each footerItems}}
-            <a href='/{{link}}'>{{name}}</a>
-          {{/each}}
+        {{#each footerItems}}
+          {{{html}}}
         {{/each}}
       </div>
     </div>
