--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -20,7 +20,9 @@
       {{{html}}}
       <div class='footer'>
         {{#each footerItems}}
-          {{{html}}}
+          <div class='footerColumn'>
+            {{{html}}}
+          </div>
         {{/each}}
       </div>
     </div>
