--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'bourbon';
-@import 'variables';
+@import 'neat';
+@import './variables';
 @import './menu';
 @import './content';
 @import './footer';
