--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -5,12 +5,38 @@
     margin-top: 70px;
     margin-bottom: 60px;
     max-width: $content-width;
-    .footerColumn {
-        @include grid-column(4);
-        h1 {
-            font-size: 14px;
-            text-align: left;
-            text-transform: uppercase;
+    .footerGridContainer {
+        @media screen and (min-width: 500px) {
+            margin-left: -20px;
+            margin-right: -20px;
+        }
+        @include grid-container;
+        .footerColumn {
+            padding-top: 20px;
+            @media screen and (min-width: 500px) {
+                @include grid-column(4);
+            }
+            h1 {
+                font-size: 14px;
+                font-weight: 700;
+                text-align: left;
+                text-transform: uppercase;
+                &::after {
+                    content: none;
+                }
+            }
+            a {
+                color: #333;
+                text-decoration: none;
+                display: block;
+                padding: 2px 10px 2px 10px;
+                border-left: #CCC 2px solid;
+                &:hover {
+                    color: #fff;
+                    border-left: #333 2px solid;
+                    background: #333;
+                }
+            }
         }
     }
 }
