update styles to be more material

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -91,7 +91,7 @@ textarea {
 
 body {
     color: #444;
-    font-family: 'Josefin Slab', serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     line-height: 1.85;
     margin: 0px;
