--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>Quicksite</title>
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700' rel='stylesheet'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700|Roboto+Slab:300,400,700|Roboto:300,400,700"
+      rel="stylesheet"
+    >
     <style>
       {{{css}}}
     </style>
