--- a/assets/scss/content.headings.scss
+++ b/assets/scss/content.headings.scss
@@ -5,6 +5,7 @@ h3,
 h4 {
     margin: 1.414rem 0 .5rem;
     font-weight: inherit;
+    font-family: 'Roboto Slab', serif;
     line-height: 1.42;
     text-align: center;
 }
@@ -17,10 +18,11 @@ h1 {
       margin: auto;
       margin-top: 0px;
       width: 200px;
-      border-top: 2px #e4002b solid;
+      border-top: 2px $color-accent solid;
       content: ''
     }
     &+h2 {
+        font-weight: 300;
         margin-top: 5px;
         font-size: 25px;
     }
