--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -31,10 +31,25 @@
                 display: block;
                 padding: 2px 10px 2px 10px;
                 border-left: #CCC 2px solid;
+                @include transition(all .1s ease);
                 &:hover {
-                    color: #fff;
-                    border-left: #333 2px solid;
-                    background: #333;
+                    border-left: 2px $color-accent solid;
+                    background: #e8e8e8;
+                }
+                &+span {
+                    @include transition(all .1s ease);
+                    color: #666;
+                    font-family: 'Roboto Mono', monospace;
+                    font-weight: 400;
+                    font-size: 10px;
+                    display: block;
+                    padding-left: 10px;
+                    border-left: 2px #eee solid;
+                    margin-bottom: 5px;
+                }
+                &:hover+span {
+                    border-left: 2px $color-accent solid;
+                    background: #f0f0f0;
                 }
             }
         }
