--- a/assets/scss/menu.scss
+++ b/assets/scss/menu.scss
@@ -13,10 +13,15 @@
       display: inline-block;
       padding: 0px 10px;
       border-right: 1px #CCC dotted;
-      text-decoration: none;
       font-size: 15px;
+      font-weight: 400;
+      letter-spacing: 1px;
       text-transform: uppercase;
-      letter-spacing: 2px;
+      text-decoration: none;
+      &:hover {
+        background: #333;
+        color: #fff;
+      }
       &:last-of-type {
         border-right: none;
       }
