--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -16,7 +16,7 @@
       <div class='menuBox'>
         <div class='menuItems'>
         {{#each menuItems}}
-          <a href='/{{link}}'>{{name}}</a>
+          <a href='./{{link}}'>{{name}}</a>
         {{/each}}
         </div>
       </div>
