--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -5,6 +5,7 @@
 
 .content {
     margin: auto;
+    padding-top: 110px;
     max-width: $content-width;
     @media screen and (max-width: $content-width + 40px) {
         margin-left: 20px;
