--- a/assets/scss/content.headings.scss
+++ b/assets/scss/content.headings.scss
@@ -21,8 +21,9 @@ h1 {
       border-top: 2px $color-accent solid;
       content: ''
     }
-    &+h2 {
+    &+p {
         font-weight: 300;
+        text-align: center;
         margin-top: 5px;
         font-size: 25px;
     }
