--- a/assets/scss/content.table.scss
+++ b/assets/scss/content.table.scss
@@ -27,7 +27,7 @@ table {
     margin-left:  0px;
     margin-right: 0px;
     background-color: $table-background;
-    box-shadow: 0px 0px 3px #ccc; 
+    box-shadow: 0px 0px 2px #d8d8d8; 
     border-radius: 3px;
     padding: 10px;
     @media screen and (min-width: $content-width) {
