--- a/assets/scss/content.code.scss
+++ b/assets/scss/content.code.scss
@@ -6,14 +6,7 @@ pre {
     text-align: left;
     box-shadow: 0px 0px 2px #d8d8d8; 
     border-radius: 3px;
-    @media screen and (min-width: $content-width) {
-      width: $content-width;
-    }
-    @media screen and (min-width: 1200px) {
-      width: $content-width + 200px;
-      margin-left:  -100px;
-      margin-right: -100px;
-    }
+    overflow-x: scroll;
 }
 
 .hljs {
