--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -6,12 +6,27 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700|Roboto+Slab:300,400,700|Roboto:300,400,700"
       rel="stylesheet"
     >
+    <!-- style -->
     <style>
       {{{css}}}
     </style>
+
+    {{#if data.gtmId}}
+      <!-- GTM -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','{{data.gtmId}}');</script>
+    {{/if}}
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    {{#if data.gtmId}}
+      <!-- GTM (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{data.gtmId}}"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    {{/if}}
     <div class='menuBox'>
       <div class='menuItems'>
       {{#each menuItems}}
