--- a/assets/scss/content.table.scss
+++ b/assets/scss/content.table.scss
@@ -22,14 +22,17 @@ $table-border-color : #e0e0e0;
 // Baseline styles
 table {
     @include transition(all .3s ease);
-    width: 100%;
+    background-color: $table-background;
+    border-radius: 3px;
+    box-shadow: 0px 0px 2px #d8d8d8; 
+    box-sizing: border-box;
+    display: block;
     margin-bottom: 2rem;
     margin-left:  0px;
     margin-right: 0px;
-    background-color: $table-background;
-    box-shadow: 0px 0px 2px #d8d8d8; 
-    border-radius: 3px;
+    overflow: hidden;
     padding: 10px;
+    width: 100%;
     @media screen and (min-width: $content-width) {
       width: $content-width;
     }
