--- a/assets/scss/content.table.scss
+++ b/assets/scss/content.table.scss
@@ -30,7 +30,7 @@ table {
     margin-bottom: 2rem;
     margin-left:  0px;
     margin-right: 0px;
-    overflow: hidden;
+    overflow: auto;
     padding: 10px;
     width: 100%;
     @media screen and (min-width: $content-width) {
