--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -17,14 +17,14 @@
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','{{data.gtmId}}');</script>
+      })(window,document,'script','dataLayer','{{providers.data.gtmId}}');</script>
     {{/if}}
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     {{#if providers.data.gtmId}}
       <!-- GTM (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{data.gtmId}}"
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{providers.data.gtmId}}"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     {{/if}}
     <div class='menuBox'>
