--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Quicksite</title>
+    <!-- meta information -->
+    <title>{{data.name}}</title>
+    {{#if data.description}}
+      <meta name="description" content="{{data.description}}" />
+    {{/if}}
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700|Roboto+Slab:300,400,700|Roboto:300,400,700"
       rel="stylesheet"
