--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <!-- meta information -->
-    <title>{{data.name}}</title>
+    <title>{{providers.data.title}} - {{data.name}}</title>
     {{#if data.description}}
-      <meta name="description" content="{{data.description}}" />
+      <meta name="description" content="{{providers.data.description}} - {{data.description}}" />
     {{/if}}
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700|Roboto+Slab:300,400,700|Roboto:300,400,700"
