--- a/assets/scss/content.code.scss
+++ b/assets/scss/content.code.scss
@@ -1,12 +1,14 @@
 pre {
-    @include transition(all .3s ease);
+    @include paperShadow;
     box-sizing: border-box;
     background-color: #fafafa;
     padding: 1rem;
     text-align: left;
-    box-shadow: 0px 0px 2px #d8d8d8; 
     border-radius: 3px;
     overflow-x: scroll;
+    &:hover {
+      @include paperShadowHover;
+    }
 }
 
 .hljs {
