--- a/assets/scss/content.table.scss
+++ b/assets/scss/content.table.scss
@@ -8,23 +8,15 @@ $table-bg-accent : #f5f5f5;
 $table-bg-hover : rgba(0, 0, 0, .12);
 $table-bg-active : $table-bg-hover;
 $table-border-color : #e0e0e0;
-// Mixins
-// -----------------
-@mixin transition($transition) {
-    -webkit-transition: $transition;
-    -o-transition: $transition;
-    transition: $transition;
-}
 
 // Tables
 //
 // -----------------
 // Baseline styles
 table {
-    @include transition(all .3s ease);
+    @include paperShadow;
     background-color: $table-background;
     border-radius: 3px;
-    box-shadow: 0px 0px 2px #d8d8d8; 
     box-sizing: border-box;
     display: block;
     margin-bottom: 2rem;
@@ -32,6 +24,9 @@ table {
     margin-right: 0px;
     overflow: auto;
     padding: 10px;
+    &:hover {
+        @include paperShadowHover;
+    }
     @media screen and (min-width: 1200px) {
       width: $content-width + 200px;
       margin-left:  -100px;
