code blocks now have white background

--- a/assets/scss/content.code.scss
+++ b/assets/scss/content.code.scss
@@ -1,5 +1,6 @@
 pre {
     @include paperShadow;
+    background: #fff;
     box-sizing: border-box;
     background-color: #fafafa;
     padding: 1rem;
