--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -72,8 +72,8 @@
               data-ad-client="{{providers.data.adSense.client}}"
               data-ad-slot="{{providers.data.adSense.slot}}"
               data-ad-format="auto"></ins>
-            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
           `)
+          (adsbygoogle = window.adsbygoogle || []).push({});
         }
         </script>
       </div>
