--- a/assets/scss/content.headings.scss
+++ b/assets/scss/content.headings.scss
@@ -3,50 +3,42 @@ h1,
 h2,
 h3,
 h4 {
-    margin: 1.414rem 0 .5rem;
-    font-weight: inherit;
+    font-weight: 500;
     font-family: 'Roboto Slab', serif;
     line-height: 1.42;
-    text-align: center;
 }
 
 h1 {
     margin-top: 0;
-    font-size: 3.998rem;
-    &::after {
-        display: block;
-        margin: auto;
-        margin-top: 0px;
-        width: 200px;
-        border-top: 2px $color-accent solid;
-        content: ''
-    }
+    font-size: 30px;
+    border-bottom: 2px solid $color-accent;
+    display: inline-block;
+    
     .content & {
         &+p {
             font-weight: 300;
-            text-align: center;
-            margin-top: 5px;
-            font-size: 25px;
+            margin-top: -15px;
+            font-size: 18px;
         }
     }
 }
 
 h2 {
-    font-size: 2.827rem;
+    font-size: 21px;
 }
 
 h3 {
-    font-size: 1.999rem;
+    font-size: 18px;
 }
 
 h4 {
-    font-size: 1.414rem;
+    font-size: 18px;
 }
 
 h5 {
-    font-size: 1.121rem;
+    font-size: 18px;
 }
 
 h6 {
-    font-size: .88rem;
+    font-size: 18px;
 }
