--- a/assets/scss/adsense.scss
+++ b/assets/scss/adsense.scss
@@ -4,3 +4,9 @@
   margin: auto;
   padding: 0px 20px 50px 20px;
 }
+
+.adSectionInText {
+  border-top: 2px dashed #ccc;
+  border-bottom: 2px dashed #ccc;
+  padding:10px 0px;
+}
