--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -75,10 +75,7 @@
             </div>
           `)
         }
-        (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "{{providers.data.adSense.client}}",
-          enable_page_level_ads: true
-        });
+        (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
       </div>
     {{/if}}
