--- a/assets/page.hbs
+++ b/assets/page.hbs
@@ -75,7 +75,9 @@
             </div>
           `)
         }
-        (adsbygoogle = window.adsbygoogle || []).push({});
+        [].forEach.call(document.querySelectorAll('.adsbygoogle'), function(){
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        });
         </script>
       </div>
     {{/if}}
