fix image styling

--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -1,5 +1,6 @@
 @import 'content.code';
 @import 'content.headings';
+@import 'content.img';
 @import 'content.table';
 @import 'content.blockquote';
 @import 'content.table';
