--- a/assets/scss/content.table.scss
+++ b/assets/scss/content.table.scss
@@ -1,14 +1,13 @@
 // Variables
 // ---------------------
-$table-header-font-weight : 400;
-$table-header-font-color : #757575;
-$table-cell-padding : 10px;
-$table-background : #fff;
-$table-bg-accent : #f5f5f5;
-$table-bg-hover : rgba(0, 0, 0, .12);
-$table-bg-active : $table-bg-hover;
-$table-border-color : #e0e0e0;
-
+$table-header-font-weight: 400;
+$table-header-font-color: #757575;
+$table-cell-padding: 10px;
+$table-background: #fff;
+$table-bg-accent: #f5f5f5;
+$table-bg-hover: rgba(0, 0, 0, .12);
+$table-bg-active: $table-bg-hover;
+$table-border-color: #e0e0e0;
 // Tables
 //
 // -----------------
@@ -17,29 +16,38 @@ table {
     @include paperShadow;
     background-color: $table-background;
     border-radius: 3px;
+    border-collapse: collapse;
     box-sizing: border-box;
     display: block;
     margin-bottom: 2rem;
-    margin-left:  0px;
+    margin-left: 0px;
     margin-right: 0px;
+    min-width: 100%;
     overflow: auto;
-    padding: 10px;
+    padding: 0px;
     &:hover {
         @include paperShadowHover;
     }
-    
     thead,
     tbody,
     tfoot {
         tr {
             @include transition(all .3s ease);
+            min-width: 100%;
             th,
             td {
+                @include transition(all .3s ease);
                 text-align: left;
                 padding: $table-cell-padding;
                 vertical-align: top;
                 border-top: 0;
-                @include transition(all .3s ease);
+                border-bottom: 1px solid #eeeeee;
+                &:first-child {
+                    padding-left: 30px;
+                }
+                &:last-child {
+                    padding-right: 30px;
+                }
             }
         }
     }
@@ -48,6 +56,11 @@ table {
         color: $table-header-font-color;
         vertical-align: bottom;
         border-bottom: 1px solid rgba(0, 0, 0, .12);
+    }
+    tr {
+        &:hover {
+            background: #eee;
+        }
     }
     caption+thead,
     colgroup+thead,
